# raytracer

./: .gitignore  CMakeLists.txt  README.txt  main.cpp
headers/: Camera.h  Cimg.h  Intersection.h  Light.h  Loader.h  Mesh.h  OBJloader.h  Pixel.h  Plane.h  ProgressBar.hpp  Ray.h  Scene.h  SceneObject.h  Sphere.h  Triangle.h
impl/: Camera.cpp  Mesh.cpp  Pixel.cpp  Plane.cpp  Ray.cpp  Scene.cpp
implementation/: Camera.cpp  Intersection.cpp  Loader.cpp  Mesh.cpp  Pixel.cpp  Ray.cpp  Scene.cpp  Sphere.cpp
scenes/: mesh_scene3.txt
